# V2

./: .env  .replit  AZURE_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PRODUCTION_SETUP.md  README.md  SETUP_INSTRUCTIONS.md  app.py  check_config.py  forms.py  manifest.json  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  service-worker.js  test_api_key.py
.github/workflows/: azure-static-web-apps-polite-sand-0064c531e.yml  main_cvgen.yml  main_cvgenerator.yml  main_cvvv.yml
attached_assets/: env (1)
instance/: cv_optimizer.db
static/: ads.txt
static/css/: custom.css  enhanced-ui.css  modern-premium.css
static/js/: clean-main.js  main.js  modern-enhanced.js
templates/: about.html  ai_cv_generator.html  base.html  checkout.html  clean-index.html  cv_generator.html  enhanced-index.html  index.html  modern-index.html  payment_options.html  payment_success.html  premium_dashboard.html  premium_subscription.html  premium_success.html  privacy.html
templates/auth/: change_password.html  edit_profile.html  login.html  profile.html  register.html
utils/: analytics.py  cv_templates.py  cv_validator.py  encryption.py  enhanced_job_extractor.py  notifications.py  openrouter_api.py  pdf_extraction.py  rate_limiter.py  security_middleware.py
